# dd-trace-php

./: Makefile  config.m4  package.xml
.circleci/: config.yml
components/: CMakeLists.txt
components/zend_abstract_interface/: CMakeLists.txt  zend_abstract_interface.c  zend_abstract_interface.h
components/zend_abstract_interface/tests/: CMakeLists.txt  zend_abstract_interface.cc
components/zend_abstract_interface/tests/stubs/: basic.php
dockerfiles/ci/buster/: Dockerfile
dockerfiles/ci/buster/php-8.0/: Dockerfile_shared_ext
ext/php5/: auto_flush.c  auto_flush.h  compatibility.h  ddtrace.c  span.c
ext/php7/: auto_flush.c  comms_php.c  coms.c  coms.h  handlers_pcntl.c
ext/php7/php7/: engine_hooks.c
tests/ext/sandbox/: auto_flush.phpt  auto_flush_attach_exception.phpt  auto_flush_disables_tracing.phpt  auto_flush_sandbox_exception.phpt  auto_flush_userland_root_span.phpt
zend_abstract_interface/: CMakeLists.txt
zend_abstract_interface/functions/: CMakeLists.txt  functions.c  functions.h
zend_abstract_interface/functions/tests/: CMakeLists.txt  functions.cc
zend_abstract_interface/zai_sapi/: CMakeLists.txt  zai_sapi.c  zai_sapi.h
